--- a/Style/Style.scss
+++ b/Style/Style.scss
@@ -11,16 +11,101 @@
     outline: none;
 }
 
-.a-enter-ar {
-    display: none;
-}
-
 body,
 html {
     width: 100%;
     height: 100%;
     font-family: 'Roboto', sans-serif;
+
+
 }
+
+.hover_loader_container {
+    width: 100vw;
+    height: 100vh;
+    background-color: #f1f1f1;
+    position: absolute;
+    z-index: 11191;
+    @include cent();
+    display: flex;
+
+    .hover_loader {
+        top: -4em;
+
+        .lds-ellipsis {
+            display: inline-block;
+            position: relative;
+            width: 80px;
+            height: 80px;
+        }
+
+        .lds-ellipsis div {
+            position: absolute;
+            top: 33px;
+            width: 13px;
+            height: 13px;
+            border-radius: 50%;
+            background: black;
+            animation-timing-function: cubic-bezier(0, 1, 1, 0);
+        }
+
+        .lds-ellipsis div:nth-child(1) {
+            left: 8px;
+            animation: lds-ellipsis1 0.6s infinite;
+        }
+
+        .lds-ellipsis div:nth-child(2) {
+            left: 8px;
+            animation: lds-ellipsis2 0.6s infinite;
+        }
+
+        .lds-ellipsis div:nth-child(3) {
+            left: 32px;
+            animation: lds-ellipsis2 0.6s infinite;
+        }
+
+        .lds-ellipsis div:nth-child(4) {
+            left: 56px;
+            animation: lds-ellipsis3 0.6s infinite;
+        }
+
+        @keyframes lds-ellipsis1 {
+            0% {
+                transform: scale(0);
+            }
+
+            100% {
+                transform: scale(1);
+            }
+        }
+
+        @keyframes lds-ellipsis3 {
+            0% {
+                transform: scale(1);
+            }
+
+            100% {
+                transform: scale(0);
+            }
+        }
+
+        @keyframes lds-ellipsis2 {
+            0% {
+                transform: translate(0, 0);
+            }
+
+            100% {
+                transform: translate(24px, 0);
+            }
+        }
+
+    }
+}
+
+.a-enter-ar {
+    display: none;
+}
+
 
 .canvas {
     background-color: red;
@@ -45,13 +130,14 @@ html {
     height: 0vh;
     position: fixed;
     z-index: 9;
-    background-color: white;
+    background-color: #f1f1f1;
     opacity: 0;
     transition-duration: .6s, 0s;
     transition-delay: 0s, 0s;
     transition-property: opacity, height;
 
 }
+
 
 
 .a-loader-title {
@@ -63,6 +149,7 @@ html {
 
 .a-enter-vr {
     background: rgba(55, 55, 60, 0);
+    display: none;
 
     .a-enter-vr-button {
         background: rgba(55, 55, 60, 0);
@@ -71,7 +158,7 @@ html {
         background-size: 90%;
         background-position: center;
         transform: scale(1);
-        filter: invert(100%);
+        // filter: invert(100%);
 
         &:hover {
             background-image: url('./Images/PNG/VR-icon.png');
@@ -138,35 +225,21 @@ html {
 }
 
 
-.logo {
-    position: absolute;
-    right: 2%;
-    top: 2%;
-    width: 5em;
-    height: 5em;
-    z-index: 10;
-    background-image: url('./Images/PNG/Logo.svg');
-    background-position: center;
-    background-size: 100%;
-    background-repeat: no-repeat;
-}
 
 .link_to_archviz {
     width: 1.5em;
     height: 1.5em;
-
     position: absolute;
     @include cent();
-    border-radius: .2em;
     bottom: calc(2% + 0em);
-    right: calc(2% + 4em);
+    right: calc(2% + 0em);
     z-index: 10;
     padding: .3em;
     color: #f1f1f1;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     text-decoration: none;
-    background-image: url('./Images/PNG/AV.svg');
+    background-image: url('./Images/PNG/favicon.png');
     background-repeat: no-repeat;
     background-size: 100%;
 
@@ -181,11 +254,15 @@ html {
         left: 2.5vw;
         transform: translate(0%, -87%);
         border: .3em solid #f1f1f1;
-        // top: -20vh;
 
         img {
             transform: translate(0%, .5%);
         }
+    }
+
+    .a-enter-vr {
+        background-image: url('./Images/PNG/VR-icon.png');
+        display: flex;
     }
 
     .the_gallery_container {
@@ -216,11 +293,11 @@ html {
     }
 
     .link_to_archviz {
-        // height: 1.2em;
-        // top: 2%;
         left: 50%;
-        transform: translate(-50%, -5%);
+        transform: translate(0%, 0%);
         filter: invert(0);
-        display: none;
+        bottom: 1em;
+        right: none;
+        left: 1em;
     }
 }
